--- a/app.json
+++ b/app.json
@@ -13,6 +13,10 @@
     "API_HASH": {
       "description": "Get this value from my.telegram.org! Please do not steal.",
       "value": ""
+    },
+    "USERNAME":{
+      "description": Kullanıcı adı gir işte ab.
+      "value": "@qiyascc"
     }
   },
   "buildpacks": [{
